--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         <li><a href="https://github.com/DennisKnie">Dennis Knie</a></li>
         <li><a href="https://github.com/Skobraf">Abed Ayoub</a></li>
       </ul>
+      
+      <h3>Support and Feedback</h3>
+      <ul class="credits">
+        <li><a href="mailto:walk_in_progress@outlook.com">walk_in_progress@outlook.com</a></li>
+      </ul>
+      
     <footer>
       <h5>Copyright &copy; 2018 walk in progress</h5>
     </footer>
