--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       
       <h3>Support and Feedback</h3>
       <ul class="credits">
+        <li>Please send an e-mail to:</li>
         <li><a href="mailto:walk_in_progress@outlook.com">walk_in_progress@outlook.com</a></li>
       </ul>
       
