--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       <ul class="credits">
         <li>Please send an e-mail to:</li>
         <li><a href="mailto:walk_in_progress@outlook.com">walk_in_progress@outlook.com</a></li>
+        <li><a href="mailto:walk_in_progress@outlook.com?subject=Your%20Subject%20Line&body=Thought%20you%20might%20be%20interested%20in%20this%20http://www.outlook.com">walk_in_progress@outlook.com</a></li>
+          
       </ul>
       
     <footer>
