--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h3>Support and Feedback</h3>
       <ul class="credits">
         <h4>Please send an e-mail to:</h4>
-        <li><a href="mailto:walk_in_progress@outlook.com">walk_in_progress@outlook.com</a></li>  
+        <li><a href="mailto:walk_in_progress@outlook.com?Subject=Hi%20there">walk_in_progress@outlook.com</a></li>  
       </ul>
       
     <footer>
