--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 
   <div class="about">
-    <img class="logo" src="img/logo-medium.svg">
+    <img class="logo" src="img/logo-large.svg">
     <!-- <h2 class="header">About</h2>
     <h3 class="header-about">Description</h3> -->
 
