--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>WIP | About</title>
+
     <link rel="stylesheet" type="text/css" href="css/about.css">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Arimo|Fredoka+One|Chicle" rel="stylesheet">
-    <title>WIP | About</title>
 </head>
 <body>
 
@@ -43,21 +45,15 @@
         <li><a href="https://github.com/Skobraf">Abed Ayoub</a></li>
       </ul>
       
-      <h4>Support and Feedback</h4>
-      <ul class="credits">
-        <h5>Please send an e-mail to:</h5>
-        <li><a href="mailto:walk_in_progress@outlook.com?Subject=Hi%20there">walk_in_progress@outlook.com</a></li>  
-      </ul>
-      
     <footer>
+      <h3>Support and Feedback</h3>
+      <p>Send an e-mail to <a href="mailto:walk_in_progress@outlook.com?Subject=Hi%20there">walk_in_progress@outlook.com</a>  
       <h5>Copyright &copy; 2018 walk in progress</h5>
     </footer>
   </div>
 
   <div class="screenshot">
-      <div class="image">
         <img src="img/mac-vector-screenshot.png">
-      </div>
   </div>
 
 </div>
